--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -379,6 +379,12 @@ a.more-link{
 	min-height: 0px;
 }
 
+.view-mode-search_result{
+	strong{
+		background-color: yellow;
+	}
+}
+
 /*END estilos comunes
 ************************************************************************************/
 
@@ -2133,10 +2139,60 @@ div[id ^= "mini-panel-partner_in_country"]{
 			}
 			&:before{
 				content: "";
+				background: url("../images/icons/214b.png") no-repeat;
+				background-size: 100%;
 				width: 20px;
 				height: 20px;
-				background-color: @color-see-more;
 				position: absolute;
+			}
+		}
+		a.social-profile-icon-facebook{
+			&:before{
+				content: "";
+				background: url("../images/icons/189b.png") no-repeat;
+				background-size: 100%;
+			}
+		}
+		a.social-profile-icon-twitter{
+			&:before{
+				content: "";
+				background: url("../images/icons/195b.png") no-repeat;
+				background-size: 100%;
+			}
+		}
+		a.social-profile-icon-youtube{
+			&:before{
+				content: "";
+				background: url("../images/icons/207b.png") no-repeat;
+				background-size: 100%;
+			}
+		}
+		a.social-profile-icon-slideshare{
+			&:before{
+				content: "";
+				background: url("../images/icons/223b.png") no-repeat;
+				background-size: 100%;
+			}
+		}
+		a.social-profile-icon-linkedin{
+			&:before{
+				content: "";
+				background: url("../images/icons/201b.png") no-repeat;
+				background-size: 100%;
+			}
+		}
+		a.social-profile-icon-pinterest{
+			&:before{
+				content: "";
+				background: url("../images/icons/121b.png") no-repeat;
+				background-size: 100%;
+			}
+		}
+		a.social-profile-icon-google{
+			&:before{
+				content: "";
+				background: url("../images/icons/222b.png") no-repeat;
+				background-size: 100%;
 			}
 		}
 	}
