--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -3,6 +3,9 @@
 .img-responsive{
 	//width: 100%;
 }
+.searched-text{
+	font-size: @font-size2 !important;
+}
 /*HEADER
 ***********************************************/
 .top-header{
