css changes - responsive filters national partners and sectorial partners 15:09 16-09-2016

--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -10850,6 +10850,8 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
     padding-right: 0px;
     max-width: 720px;
     min-width: 290px;
+    z-index: 1;
+    margin-top: 30px;
   }
   .quicktabs-tabs-container ul.quicktabs-tabs.container {
     margin-right: inherit;
