--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -788,6 +788,8 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
     padding-right: 0px;
     max-width: 720px;
     min-width: 290px;
+    z-index: 1;
+    margin-top: 30px;
     ul.quicktabs-tabs.container{
     	    margin-right: inherit;
 		    margin-left: inherit;
