--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -1068,6 +1068,7 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 				.hwc-alpha-pager-view-title-field{
 					h3{
 						margin-top: 10px;
+						font-size: @font-size1-4;
 						a{
 							color: @color-text-grey;
 							font-weight: bold;
