--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -9923,6 +9923,114 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
   margin-left: 0px;
 }
 /*END SEARCH*/
+/* EU LEVEL COUNTRY
+*************************************************/
+.page-country-profile-eu .country-partners-container {
+  position: relative;
+}
+.page-country-profile-eu .country-partners-container * {
+  box-sizing: border-box;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper:nth-child(2n+1) {
+  border-right: 2px solid #786586;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] {
+  margin: 0px 40px;
+  cursor: pointer;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] div[class*="col-sm"] {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row {
+  padding-bottom: 0px;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first {
+  padding-top: 40px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .partner-image-container {
+  width: 100%;
+  max-height: 125px;
+  min-height: 125px;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .partner-text-container {
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .partner-text-container h2 {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  min-height: 40px;
+  margin-bottom: 35px;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last {
+  display: none;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container {
+  width: 100%;
+  clear: both;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-contact-information-partner .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-contact-information-partner .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-contact-information-partner .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-contact-information-partner .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-node-field-social-profile .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-node-field-social-profile .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-node-field-social-profile .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-node-field-social-profile .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-node-field-collaborator .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-node-field-collaborator .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-node-field-collaborator .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-node-field-collaborator .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-taxonomy-term-field-ncw-fp-link .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-taxonomy-term-field-ncw-fp-link .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-taxonomy-term-field-ncw-fp-link .pane-title,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-taxonomy-term-field-ncw-fp-link .pane-title {
+  margin: 15px 0px;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-contact-information-partner > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-contact-information-partner > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-contact-information-partner > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-contact-information-partner > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-node-field-social-profile > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-node-field-social-profile > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-node-field-social-profile > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-node-field-social-profile > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-node-field-collaborator > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-node-field-collaborator > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-node-field-collaborator > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-node-field-collaborator > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-taxonomy-term-field-ncw-fp-link > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-taxonomy-term-field-ncw-fp-link > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-taxonomy-term-field-ncw-fp-link > .pane-content,
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-taxonomy-term-field-ncw-fp-link > .pane-content {
+  border-bottom: 2px solid #786586;
+  padding-bottom: 15px;
+}
+.page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-content {
+  margin: 15px 0px;
+}
+.page-country-profile-eu .country-partners-container .active {
+  float: left;
+  position: absolute;
+  margin-right: 30px;
+}
+.page-country-profile-eu .country-partners-container .active .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last {
+  display: block !important;
+}
+.page-country-profile-eu .country-partners-container .has-open-partner {
+  float: right;
+  clear: both;
+  border-left: 2px solid #786586;
+}
+/*END EU LEVEL COUNTRY*/
 /*Pagination styles*/
 .pager li {
   color: #10b2e4;
@@ -11125,6 +11233,7 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
   .page-national-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3,
   .page-irat-network .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3 {
     margin-top: 10px;
+    font-size: 1.4em;
   }
   .page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3 a,
   .page-national-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3 a,
