--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -114,6 +114,34 @@
 }
 /*END HEADER*/
 
+/*FOOTER
+********************************************/
+.site-footer{
+	#block-menu-menu-footer-menu{
+		li{
+			margin-right: 10px;
+    		margin-left: 0px;
+			a{
+				padding-left: 0px;
+				padding-right: 10px;
+				border-right: 2px solid;
+				border-left: none;
+			}
+		}
+		.first{
+			a{
+				padding-left: 0px; 
+			}
+		}
+		.last{
+			a{
+				border-right: none;
+			}
+		}
+	}
+}
+/*END FOOTER*/
+
 h1{
 	font-size: @font-size2-2;
 }
