--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -2122,6 +2122,15 @@ div[id ^= "mini-panel-partner_in_country"]{
 		    margin-right: 0px;
 		    margin-bottom: 15px;
 		}
+		.pane-contact-information-partner{
+			.pane-content{
+				.pane-title{
+					color: @color-text-grey !important;
+					font-weight: bold !important;
+					font-size: @font-size1 !important;
+				}
+			}
+		}
 	}
 	.partner-social-container{
 		a{
